<resources>
    <string name="app_name">SmartMozoExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>

    <!-- Menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_bindings">Bindings</string>
    <string name="menu_clear">Clear Bindings</string>
    <string name="menu_admin">S</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_ble_scan_time_out">BLE scan time out</string>
    <string name="pref_title_ble_rssi_ignore">RSSI Ignore</string>
    <string name="pref_title_ble_sample_size">Precision</string>
    <string name="pref_title_enable_shake_to_pickup">Enable shake to pick up</string>
    <string name="pref_title_enable_beep">Enable beep</string>

    <string name="pref_summary_rssi_ignore">The pick up range can be adjusted here. </string>
    <string name="pref_summary_sample_size">Increasing the precision of the pick up decreases the responsiveness.</string>

    <string-array name="pref_rssi_ignore_titles">
        <item>-45dBm</item>
        <item>-47dBm</item>
        <item>-50dBm</item>
        <item>-52dBm</item>
        <item>-55dBm</item>
        <item>-57dBm</item>
        <item>-60dBm</item>
        <item>-62dBm</item>
        <item>-65dBm</item>
    </string-array>
    <string-array name="pref_rssi_ignore_values">
        <item>45</item>
        <item>47</item>
        <item>50</item>
        <item>52</item>
        <item>55</item>
        <item>57</item>
        <item>60</item>
        <item>62</item>
        <item>65</item>
    </string-array>

    <string-array name="pref_sample_size_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_sample_size_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>

    <string-array name="pref_example_list_titles">
        <item>1 minute</item>
        <item>5 minute</item>
        <item>10 minute</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
        <item>1800000</item>
    </string-array>
</resources>
