<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <SwitchPreference
        android:key="example_switch"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />
    -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="scan_timeout"
        android:title="@string/pref_title_ble_scan_time_out"
        android:defaultValue="600000"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="rssi_filter"
        android:title="@string/pref_title_ble_rssi_ignore"
        android:defaultValue="55"
        android:summary="@string/pref_summary_rssi_ignore"
        android:entries="@array/pref_rssi_ignore_titles"
        android:entryValues="@array/pref_rssi_ignore_values"/>

    <ListPreference
        android:key="precision"
        android:title="@string/pref_title_ble_precision"
        android:defaultValue="25"
        android:summary="@string/pref_summary_precision"
        android:entries="@array/pref_precision_titles"
        android:entryValues="@array/pref_precision_values"/>

    <SwitchPreference
        android:key="enable_shake_to_pickup"
        android:title="@string/pref_title_enable_shake_to_pickup"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="enable_beep"
        android:title="@string/pref_title_enable_beep"
        android:defaultValue="true" />

</PreferenceScreen>
